[gd_scene load_steps=3 format=3 uid="uid://b3ucytmm3fw3i"]

[ext_resource type="Script" path="res://Scripts/UserInterface/settings_menu.gd" id="1_nrco6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3413q"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nrco6")

[node name="SettingsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.5
offset_top = -241.0
offset_right = 86.5
offset_bottom = -199.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "- SETTINGS -"

[node name="SettingsBar" type="Panel" parent="."]
self_modulate = Color(0, 0, 0, 0.945098)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -247.5
offset_top = -160.0
offset_right = 247.5
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sliders" type="VBoxContainer" parent="SettingsBar"]
layout_mode = 2
offset_left = 203.5
offset_top = 49.0
offset_right = 448.5
offset_bottom = 207.0
grow_horizontal = 0
grow_vertical = 2
size_flags_vertical = 4

[node name="HSlider" type="HSlider" parent="SettingsBar/Sliders"]
layout_mode = 2
size_flags_vertical = 3
step = 10.0
rounded = true
scrollable = false

[node name="HSlider2" type="HSlider" parent="SettingsBar/Sliders"]
layout_mode = 2
size_flags_vertical = 3
step = 10.0
rounded = true
scrollable = false

[node name="HSlider3" type="HSlider" parent="SettingsBar/Sliders"]
layout_mode = 2
size_flags_vertical = 3
step = 10.0
rounded = true
scrollable = false

[node name="Texts" type="VBoxContainer" parent="SettingsBar"]
layout_mode = 1
offset_left = 50.5
offset_top = 64.0
offset_right = 135.5
offset_bottom = 193.0

[node name="MasterText" type="Label" parent="SettingsBar/Texts"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Master"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="SettingsBar/Texts"]
layout_mode = 2

[node name="Control3" type="Control" parent="SettingsBar/Texts"]
layout_mode = 2

[node name="MusicText" type="Label" parent="SettingsBar/Texts"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control2" type="Control" parent="SettingsBar/Texts"]
layout_mode = 2

[node name="Control4" type="Control" parent="SettingsBar/Texts"]
layout_mode = 2

[node name="SFXTest" type="Label" parent="SettingsBar/Texts"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "SFX"
horizontal_alignment = 1

[node name="ReturnButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = 100.0
offset_right = 43.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_pressed_color = Color(0.427451, 0.807843, 0.819608, 1)
theme_override_colors/font_hover_color = Color(0.427451, 0.807843, 0.819608, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_3413q")
text = "Return"
flat = true

[connection signal="pressed" from="ReturnButton" to="." method="_on_return_button_pressed"]
